[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.2"
ckb-testtool = { git = "https://github.com/quake/capsule", branch = "quake/ckb-0.111" }
ckb-debugger-tests = { path = "../ckb-combine-lock-poc/ckb-debugger-tests" }
